--- a/node/package.json
+++ b/node/package.json
@@ -1,10 +1,10 @@
 {
   "name": "password-generator",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "A simple random password generator",
   "main": "index.js",
   "scripts": {
-    "run": "node index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,5 +19,12 @@
   "bugs": {
     "url": "https://github.com/FabioZTessitore/password-generator/issues"
   },
-  "homepage": "https://github.com/FabioZTessitore/password-generator#readme"
+  "homepage": "https://github.com/FabioZTessitore/password-generator#readme",
+  "dependencies": {
+    "ejs": "^2.5.7",
+    "express": "^4.16.2",
+    "helmet": "^3.9.0",
+    "jquery": "^3.2.1",
+    "lodash": "^4.17.4"
+  }
 }
